import { screen, waitForElementToBeRemoved } from '@testing-library/react';
import userEvent from '@testing-library/user-event';
import { render } from '@tonic-ui/react/test-utils/render';
import { Alert, Collapse } from '@tonic-ui/react/src';
import { useToggle } from '@tonic-ui/react-hooks';
import { callEventHandlers, transitionDuration } from '@tonic-ui/utils';
import React from 'react';

describe('Alert', () => {
  it('should render correctly', async () => {
    const user = userEvent.setup();
    const message = 'This is an alert message';
    const handleClose = jest.fn();

    const TestComponent = ({ onClose }) => {
      const [isOpen, toggle] = useToggle(true);
      return (
        <Collapse in={isOpen} unmountOnExit>
          <Alert
            variant="solid"
            severity="success"
            isClosable
            onClose={callEventHandlers(() => toggle(false), onClose)}
            data-testid="alert"
          >
            {message}
          </Alert>
        </Collapse>
      );
    };

    const { asFragment } = render(<TestComponent onClose={handleClose} />);

    const alertElement = screen.getByTestId('alert');
    expect(alertElement).toBeInTheDocument();
    expect(alertElement).toHaveTextContent(message);
    expect(asFragment()).toMatchSnapshot();

    const closeButton = screen.getByRole('button');
    await user.click(closeButton);
    expect(handleClose).toHaveBeenCalledTimes(1);

    await waitForElementToBeRemoved(() => screen.getByTestId('alert'), {
      timeout: transitionDuration.standard + 100, // see "transitions/Collapse.js"
    });
  });

  describe('variants', () => {
    const severities = ['success', 'info', 'warning', 'error'];
    const variants = ['solid', 'outline'];

    variants.forEach((variant) => {
      severities.forEach((severity) => {
        it(`should render ${variant} variant with ${severity} severity`, () => {
          const { asFragment } = render(
            <Alert variant={variant} severity={severity}>
              This is a {severity} alert
            </Alert>
          );
          expect(asFragment()).toMatchSnapshot();
        });
      });
    });
  });
});
