// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert should render correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  height: auto;
  opacity: 1;
  -webkit-transition: height 300ms cubic-bezier(0.4, 0, 0.2, 1),opacity 300ms cubic-bezier(0.4, 0, 0.2, 1);
  transition: height 300ms cubic-bezier(0.4, 0, 0.2, 1),opacity 300ms cubic-bezier(0.4, 0, 0.2, 1);
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  position: relative;
  padding-left: var(--tonic-space-4x);
  padding-right: var(--tonic-space-4x);
  padding-top: var(--tonic-space-10q);
  padding-bottom: var(--tonic-space-10q);
  background-color: var(--tonic-colors-success-_overlay);
  color: var(--tonic-colors-success-_onOverlay-text);
}

.emotion-6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-right: var(--tonic-space-2x);
  margin-top: var(--tonic-space-1h);
  background-color: var(--tonic-colors-transparent);
  color: var(--tonic-colors-success-icon);
}

.emotion-8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: var(--tonic-sizes-4x);
  height: var(--tonic-sizes-4x);
  vertical-align: middle;
}

.emotion-10 {
  padding-right: var(--tonic-space-10x);
  width: 100%;
}

.emotion-12 {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: var(--tonic-colors-transparent);
  border: none;
  color: var(--tonic-colors-text-secondary);
  cursor: pointer;
  outline: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: var(--tonic-sizes-8x);
  height: var(--tonic-sizes-8x);
  position: absolute;
  top: calc(.25rem - .0625rem);
  right: calc(.5rem - .0625rem);
}

.emotion-12:focus-visible {
  outline-color: var(--tonic-colors-_component-keyboardFocused-outerFocusRing);
  outline-offset: calc(0px - var(--tonic-space-1h));
  outline-style: solid;
  outline-width: var(--tonic-sizes-1h);
}

.emotion-12:hover,
.emotion-12[data-hover] {
  color: var(--tonic-colors-text-accent);
}

.emotion-12:disabled,
.emotion-12:disabled:focus,
.emotion-12:disabled:hover,
.emotion-12[aria-disabled=true],
.emotion-12[aria-disabled=true]:focus,
.emotion-12[aria-disabled=true]:hover,
.emotion-12[data-disabled] {
  color: var(--tonic-colors-text-secondary);
}

<div
    class="emotion-0 emotion-1"
    data-tonic="Collapse"
  >
    <div
      class="emotion-2 emotion-1"
    >
      <div
        class="emotion-4 emotion-1"
        data-testid="alert"
        data-tonic="Alert"
      >
        <div
          class="emotion-6 emotion-1"
          data-tonic="AlertIcon"
        >
          <svg
            aria-hidden="true"
            class="emotion-8 emotion-1"
            data-icon="SuccessIcon"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 16 16"
          >
            <path
              d="M8 0c-4.418 0-8 3.582-8 8s3.582 8 8 8c4.418 0 8-3.582 8-8v0c0-4.418-3.582-8-8-8v0zM7 12l-4-4 1-1 3 3 5-6 1 1z"
            />
          </svg>
        </div>
        <div
          class="emotion-10 emotion-1"
          data-tonic="AlertMessage"
        >
          This is an alert message
        </div>
        <button
          aria-label="Close"
          class="emotion-12 emotion-1"
          data-tonic="AlertCloseButton"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="emotion-8 emotion-1"
            data-icon="CloseSIcon"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 16 16"
          >
            <path
              d="M9 8l4-4-1-1-4 4-4-4-1 1 4 4-4 4 1 1 4-4 4 4 1-1-4-4z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert variants should render outline variant with error severity 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  position: relative;
  padding-left: calc(1rem - .0625rem);
  padding-right: calc(1rem - .0625rem);
  padding-top: calc(.625rem - .0625rem);
  padding-bottom: calc(.625rem - .0625rem);
  border-color: var(--tonic-colors-error-icon);
  border-style: solid;
  border-width: var(--tonic-sizes-1q);
  border-radius: var(--tonic-radii-sm);
  color: var(--tonic-colors-text-primary);
}

.emotion-2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-right: var(--tonic-space-2x);
  margin-top: var(--tonic-space-1h);
  background-color: var(--tonic-colors-transparent);
  color: var(--tonic-colors-error-icon);
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: var(--tonic-sizes-4x);
  height: var(--tonic-sizes-4x);
  vertical-align: middle;
}

.emotion-6 {
  padding-right: 0;
  width: 100%;
}

<div
    class="emotion-0 emotion-1"
    data-tonic="Alert"
  >
    <div
      class="emotion-2 emotion-1"
      data-tonic="AlertIcon"
    >
      <svg
        aria-hidden="true"
        class="emotion-4 emotion-1"
        data-icon="ErrorIcon"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 16 16"
      >
        <path
          d="M8 0c-4.418 0-8 3.582-8 8s3.582 8 8 8c4.418 0 8-3.582 8-8v0c0-4.418-3.582-8-8-8v0zM11 12l-3-3-3 3-1.060-1.060 3.060-2.94-3-3 1.060-1.070 2.94 2.95 2.94-2.94 1.060 1.060-2.89 3 3 3z"
        />
      </svg>
    </div>
    <div
      class="emotion-6 emotion-1"
      data-tonic="AlertMessage"
    >
      This is a error alert
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert variants should render outline variant with info severity 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  position: relative;
  padding-left: calc(1rem - .0625rem);
  padding-right: calc(1rem - .0625rem);
  padding-top: calc(.625rem - .0625rem);
  padding-bottom: calc(.625rem - .0625rem);
  border-color: var(--tonic-colors-info-icon);
  border-style: solid;
  border-width: var(--tonic-sizes-1q);
  border-radius: var(--tonic-radii-sm);
  color: var(--tonic-colors-text-primary);
}

.emotion-2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-right: var(--tonic-space-2x);
  margin-top: var(--tonic-space-1h);
  background-color: var(--tonic-colors-transparent);
  color: var(--tonic-colors-info-icon);
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: var(--tonic-sizes-4x);
  height: var(--tonic-sizes-4x);
  vertical-align: middle;
}

.emotion-6 {
  padding-right: 0;
  width: 100%;
}

<div
    class="emotion-0 emotion-1"
    data-tonic="Alert"
  >
    <div
      class="emotion-2 emotion-1"
      data-tonic="AlertIcon"
    >
      <svg
        aria-hidden="true"
        class="emotion-4 emotion-1"
        data-icon="InfoIcon"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 16 16"
      >
        <path
          d="M8 0c-4.418 0-8 3.582-8 8s3.582 8 8 8c4.418 0 8-3.582 8-8v0c0-4.418-3.582-8-8-8v0zM7 4h2v2h-2zM10 12h-4v-1h1v-3h-1v-1h3v4h1z"
        />
      </svg>
    </div>
    <div
      class="emotion-6 emotion-1"
      data-tonic="AlertMessage"
    >
      This is a info alert
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert variants should render outline variant with success severity 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  position: relative;
  padding-left: calc(1rem - .0625rem);
  padding-right: calc(1rem - .0625rem);
  padding-top: calc(.625rem - .0625rem);
  padding-bottom: calc(.625rem - .0625rem);
  border-color: var(--tonic-colors-success-icon);
  border-style: solid;
  border-width: var(--tonic-sizes-1q);
  border-radius: var(--tonic-radii-sm);
  color: var(--tonic-colors-text-primary);
}

.emotion-2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-right: var(--tonic-space-2x);
  margin-top: var(--tonic-space-1h);
  background-color: var(--tonic-colors-transparent);
  color: var(--tonic-colors-success-icon);
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: var(--tonic-sizes-4x);
  height: var(--tonic-sizes-4x);
  vertical-align: middle;
}

.emotion-6 {
  padding-right: 0;
  width: 100%;
}

<div
    class="emotion-0 emotion-1"
    data-tonic="Alert"
  >
    <div
      class="emotion-2 emotion-1"
      data-tonic="AlertIcon"
    >
      <svg
        aria-hidden="true"
        class="emotion-4 emotion-1"
        data-icon="SuccessIcon"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 16 16"
      >
        <path
          d="M8 0c-4.418 0-8 3.582-8 8s3.582 8 8 8c4.418 0 8-3.582 8-8v0c0-4.418-3.582-8-8-8v0zM7 12l-4-4 1-1 3 3 5-6 1 1z"
        />
      </svg>
    </div>
    <div
      class="emotion-6 emotion-1"
      data-tonic="AlertMessage"
    >
      This is a success alert
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert variants should render outline variant with warning severity 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  position: relative;
  padding-left: calc(1rem - .0625rem);
  padding-right: calc(1rem - .0625rem);
  padding-top: calc(.625rem - .0625rem);
  padding-bottom: calc(.625rem - .0625rem);
  border-color: var(--tonic-colors-minorWarning-icon);
  border-style: solid;
  border-width: var(--tonic-sizes-1q);
  border-radius: var(--tonic-radii-sm);
  color: var(--tonic-colors-text-primary);
}

.emotion-2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-right: var(--tonic-space-2x);
  margin-top: var(--tonic-space-1h);
  background-color: var(--tonic-colors-transparent);
  color: var(--tonic-colors-minorWarning-icon);
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: var(--tonic-sizes-4x);
  height: var(--tonic-sizes-4x);
  vertical-align: middle;
}

.emotion-6 {
  padding-right: 0;
  width: 100%;
}

<div
    class="emotion-0 emotion-1"
    data-tonic="Alert"
  >
    <div
      class="emotion-2 emotion-1"
      data-tonic="AlertIcon"
    >
      <svg
        aria-hidden="true"
        class="emotion-4 emotion-1"
        data-icon="WarningMinorIcon"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 16 16"
      >
        <path
          d="M15.7 7.3l-7-7c-0.4-0.4-1-0.4-1.4 0l-7 7c-0.4 0.4-0.4 1 0 1.4l7 7c0.4 0.4 1 0.4 1.4 0l7-7c0.4-0.4 0.4-1 0-1.4zM9 12h-2v-2h2v2zM9 9h-2v-5h2v5z"
        />
      </svg>
    </div>
    <div
      class="emotion-6 emotion-1"
      data-tonic="AlertMessage"
    >
      This is a warning alert
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert variants should render solid variant with error severity 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  position: relative;
  padding-left: var(--tonic-space-4x);
  padding-right: var(--tonic-space-4x);
  padding-top: var(--tonic-space-10q);
  padding-bottom: var(--tonic-space-10q);
  background-color: var(--tonic-colors-error-_overlay);
  color: var(--tonic-colors-error-_onOverlay-text);
}

.emotion-2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-right: var(--tonic-space-2x);
  margin-top: var(--tonic-space-1h);
  background-color: var(--tonic-colors-transparent);
  color: var(--tonic-colors-error-icon);
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: var(--tonic-sizes-4x);
  height: var(--tonic-sizes-4x);
  vertical-align: middle;
}

.emotion-6 {
  padding-right: 0;
  width: 100%;
}

<div
    class="emotion-0 emotion-1"
    data-tonic="Alert"
  >
    <div
      class="emotion-2 emotion-1"
      data-tonic="AlertIcon"
    >
      <svg
        aria-hidden="true"
        class="emotion-4 emotion-1"
        data-icon="ErrorIcon"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 16 16"
      >
        <path
          d="M8 0c-4.418 0-8 3.582-8 8s3.582 8 8 8c4.418 0 8-3.582 8-8v0c0-4.418-3.582-8-8-8v0zM11 12l-3-3-3 3-1.060-1.060 3.060-2.94-3-3 1.060-1.070 2.94 2.95 2.94-2.94 1.060 1.060-2.89 3 3 3z"
        />
      </svg>
    </div>
    <div
      class="emotion-6 emotion-1"
      data-tonic="AlertMessage"
    >
      This is a error alert
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert variants should render solid variant with info severity 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  position: relative;
  padding-left: var(--tonic-space-4x);
  padding-right: var(--tonic-space-4x);
  padding-top: var(--tonic-space-10q);
  padding-bottom: var(--tonic-space-10q);
  background-color: var(--tonic-colors-info-_overlay);
  color: var(--tonic-colors-info-_onOverlay-text);
}

.emotion-2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-right: var(--tonic-space-2x);
  margin-top: var(--tonic-space-1h);
  background-color: var(--tonic-colors-transparent);
  color: var(--tonic-colors-info-icon);
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: var(--tonic-sizes-4x);
  height: var(--tonic-sizes-4x);
  vertical-align: middle;
}

.emotion-6 {
  padding-right: 0;
  width: 100%;
}

<div
    class="emotion-0 emotion-1"
    data-tonic="Alert"
  >
    <div
      class="emotion-2 emotion-1"
      data-tonic="AlertIcon"
    >
      <svg
        aria-hidden="true"
        class="emotion-4 emotion-1"
        data-icon="InfoIcon"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 16 16"
      >
        <path
          d="M8 0c-4.418 0-8 3.582-8 8s3.582 8 8 8c4.418 0 8-3.582 8-8v0c0-4.418-3.582-8-8-8v0zM7 4h2v2h-2zM10 12h-4v-1h1v-3h-1v-1h3v4h1z"
        />
      </svg>
    </div>
    <div
      class="emotion-6 emotion-1"
      data-tonic="AlertMessage"
    >
      This is a info alert
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert variants should render solid variant with success severity 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  position: relative;
  padding-left: var(--tonic-space-4x);
  padding-right: var(--tonic-space-4x);
  padding-top: var(--tonic-space-10q);
  padding-bottom: var(--tonic-space-10q);
  background-color: var(--tonic-colors-success-_overlay);
  color: var(--tonic-colors-success-_onOverlay-text);
}

.emotion-2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-right: var(--tonic-space-2x);
  margin-top: var(--tonic-space-1h);
  background-color: var(--tonic-colors-transparent);
  color: var(--tonic-colors-success-icon);
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: var(--tonic-sizes-4x);
  height: var(--tonic-sizes-4x);
  vertical-align: middle;
}

.emotion-6 {
  padding-right: 0;
  width: 100%;
}

<div
    class="emotion-0 emotion-1"
    data-tonic="Alert"
  >
    <div
      class="emotion-2 emotion-1"
      data-tonic="AlertIcon"
    >
      <svg
        aria-hidden="true"
        class="emotion-4 emotion-1"
        data-icon="SuccessIcon"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 16 16"
      >
        <path
          d="M8 0c-4.418 0-8 3.582-8 8s3.582 8 8 8c4.418 0 8-3.582 8-8v0c0-4.418-3.582-8-8-8v0zM7 12l-4-4 1-1 3 3 5-6 1 1z"
        />
      </svg>
    </div>
    <div
      class="emotion-6 emotion-1"
      data-tonic="AlertMessage"
    >
      This is a success alert
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert variants should render solid variant with warning severity 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  position: relative;
  padding-left: var(--tonic-space-4x);
  padding-right: var(--tonic-space-4x);
  padding-top: var(--tonic-space-10q);
  padding-bottom: var(--tonic-space-10q);
  background-color: var(--tonic-colors-minorWarning-_overlay);
  color: var(--tonic-colors-minorWarning-_onOverlay-text);
}

.emotion-2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-right: var(--tonic-space-2x);
  margin-top: var(--tonic-space-1h);
  background-color: var(--tonic-colors-transparent);
  color: var(--tonic-colors-minorWarning-icon);
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: var(--tonic-sizes-4x);
  height: var(--tonic-sizes-4x);
  vertical-align: middle;
}

.emotion-6 {
  padding-right: 0;
  width: 100%;
}

<div
    class="emotion-0 emotion-1"
    data-tonic="Alert"
  >
    <div
      class="emotion-2 emotion-1"
      data-tonic="AlertIcon"
    >
      <svg
        aria-hidden="true"
        class="emotion-4 emotion-1"
        data-icon="WarningMinorIcon"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 16 16"
      >
        <path
          d="M15.7 7.3l-7-7c-0.4-0.4-1-0.4-1.4 0l-7 7c-0.4 0.4-0.4 1 0 1.4l7 7c0.4 0.4 1 0.4 1.4 0l7-7c0.4-0.4 0.4-1 0-1.4zM9 12h-2v-2h2v2zM9 9h-2v-5h2v5z"
        />
      </svg>
    </div>
    <div
      class="emotion-6 emotion-1"
      data-tonic="AlertMessage"
    >
      This is a warning alert
    </div>
  </div>
</DocumentFragment>
`;
